--- a/styles/main.css
+++ b/styles/main.css
@@ -15,6 +15,14 @@ body {
   display: flex;
 }
 
+.justify-cont-center {
+  justify-content: center;
+}
+
+.align-it-center {
+  align-items: center;
+}
+
 .flex-dir-clm {
   flex-direction: column;
 }
@@ -25,6 +33,11 @@ body {
 
 .pd-left-20 {
   padding-left: 20px;
+}
+
+a {
+  color: #fff;
+  text-decoration: none;
 }
 
 
@@ -76,27 +89,24 @@ body {
 
 .sidebar-top-playlist i {
   font-size: 20px;
-  vertical-align: middle;
   background: #555;
-  padding: 10px;
+  padding: 15px;
 }
 
 .sidebar-bottom {
   height: 80px; /*debug*/
   background: #000;
 }
-
-.sidebar-bottom a:nth-child(1) i {
+.sidebar-bottom a:first-child {
   width: 90%;
+  border-bottom: 1px solid white;
   padding-bottom: 10px;
-  border-bottom: 1px solid #fff;
 }
 
 .sidebar-bottom a:nth-child(2) img {
   width: 20px;
   background: #555;
 }
-
 
 /* CONTENT */
 #content {
@@ -202,4 +212,14 @@ body {
 .player-brano img {
   width: 50px;
   height: 50px;
+}
+
+.player-actions-time {
+  width: 435px;
+  border-bottom: 4px solid rgba(70, 61, 61, 1);
+}
+
+.player-volume-hight {
+  width: 150px;
+  border-bottom: 4px solid rgba(70, 61, 61, 1);
 }
